--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,6 +1,33 @@
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&display=swap");
 
 @import "tailwindcss";
+@plugin "@tailwindcss/typography";
+
 @theme {
   --font-sans: "IBM Plex Sans", sans-serif;
+}
+
+.prose {
+  --tw-prose-pre-bg: var(--color-slate-100);
+
+  img {
+    @apply rounded-lg;
+  }
+
+  a {
+    @apply no-underline hover:border-b border-dashed relative;
+  }
+
+  :where(code):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
+    @apply bg-slate-100 border border-slate-200 px-1 py-0.5 rounded font-medium;
+
+    &::after,
+    &::before {
+      content: "";
+    }
+  }
+
+  p {
+    @apply text-justify;
+  }
 }
